--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                 The premier Emergency Response: Liberty County community. <br>
                 Professional Staff. Realistic Protocols. 24/7 Activity.
             </p>
-            <a href="https://discord.gg/nmsr" target="_blank" class="btn-primary hidden-el">
+            <a href="https://discord.gg/nmsrp" target="_blank" class="btn-primary hidden-el">
                 <i class="fab fa-discord"></i> Join Discord
             </a>
         </div>
